Add products catalog

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,5 @@
 
 body {
   font-family: "Montserrat", sans-serif;
-}
-
-/* Minimal custom styles */
-.active-menu-item {
-  @apply border-yellow-500;
+  background-color: #e7e9e8;
 }
